--- a/roles/config-tower/vars/main.yml
+++ b/roles/config-tower/vars/main.yml
@@ -8,7 +8,7 @@ user_name: admin
 password: r3dh4t1!
 ssh_cred_name: "Connect_to_workstation"
 user_cred_name: "cloud-user"
-user_cred_path: "/root/.ssh/openstack.pem"
+user_cred_path: "/home/jlott-conres.com/.ssh/openstack.pem"
 static_inventory_name: scm_inventory
 instance_group_name: osp
 workflow_template_name: cicd_workflow
