--- a/roles/setup-workstation/tasks/pre-tasks.yml
+++ b/roles/setup-workstation/tasks/pre-tasks.yml
@@ -27,4 +27,4 @@
   authorized_key:
     user: cloud-user
     state: present
-    key: "{{ lookup('file', '/root/.ssh/openstack.pub') }}"
+    key: "{{ lookup('file', '/home/jlott-conres.com/.ssh/openstack.pub') }}"
